# LLM-transformer

./: Dockerfile  README.md  build_docker_image.sh  docker.sh  docker_fix.sh  pyproject.toml
llma/: config.py  dataset.py  main.py  test.py  tokenizer.py  train.py
llmt/: config.py  dataset.py  main.py  model.py  test.py  tokenizer.py  train.py  utils.py
