[tool.poetry]
name = "llm-kotlin-finetune"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgemf@gmail.com>"]
readme = "README.md"
packages = [{ include = "llm_kotlin_finetune" }]

[tool.poetry.dependencies]
python = "3.10.*"
datasets = "2.14.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
transformers = "^4.31.0"
sentencepiece = "^0.1.99"
typer = "^0.9.0"
tensorboard = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
