[tool.poetry]
name = "llm-transformer"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgemf@gmail.com>"]
readme = "README.md"
packages = [{ include = "llmt" }]

[tool.poetry.dependencies]
python = "3.10.*"
datasets = "2.14.5"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
transformers = "^4.34.0"
accelerate = "^0.23.0"
sentencepiece = "^0.1.99"
typer = "^0.9.0"
tensorboard = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
