[tool.poetry]
name = "llm-transformer"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgemf@gmail.com>"]
readme = "README.md"
packages = [{ include = "llmt" }]

[tool.poetry.dependencies]
python = "3.10.*"
datasets = "2.15.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
transformers = "^4.35.2"
accelerate = "^0.24.1"
sentencepiece = "^0.1.99"
typer = "^0.9.0"
tensorboard = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
